--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,14 @@
       U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
       U+FEFF, U+FFFD;
   }
+  @font-face {
+    font-family: 'Courier Prime';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/courierprime/v7/u-450q2lgwslOqpF_6gQ8kELawFpWg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
 * {
     box-sizing: border-box;
 }
@@ -47,9 +55,34 @@ h2,h3,p{
 }
 .nav-link:hover{
     color: #048A81 !important;
-    font-weight: bold;
-    border-bottom: 5px solid #048A81;
 }
+.nav-link:hover:after{
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
+}
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: #048A81;
+  }
+  .hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #048A81;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
 .last{
     margin-right: 150px;
 }
@@ -59,13 +92,15 @@ h2,h3,p{
 }
 .active{
     color:#048a81 !important;
+    font-weight: bold;
 }
 /*intro styling*/
 .intro{
-    background-image: url("../assets/intro-photo-cropped-2.jpg");
+    background-image: url("../assets/new-grad-intro-photo.jpg");
     background-color: #048A81;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 60% 45%;
     min-height: 42em;
 }
 .intro h1{
@@ -73,7 +108,7 @@ h2,h3,p{
     font-size: 6em;
     font-weight: bold;
 }
-.chantal-coral{
+.text-coral{
     color:#F96C62;
 }
 .intro p{
@@ -177,8 +212,15 @@ h2,h3,p{
     background-color: #fafafa;
 }*/
 /*contact form styling*/
+.no-padding{
+    padding: 0;
+}
+form{
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 75%;
+}
 .contact-form{
-    max-width: 75%;
     padding: 1em;
 }
 .input-pad{
@@ -302,6 +344,95 @@ h2,h3,p{
     display: flex;
     color: white;
 }
+.about-intro-1{
+    background-image: url("../assets/chantalgrad1.jpg");
+    background-color: #4CB5AE;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 49%;
+    min-height: 20em;
+}
+.about-intro-1 h2{
+    font-size: 5em;
+    font-family:'Licorice', cursive;
+    margin-top: 1.5em;
+    margin-left: 1.5em;
+}
+.about-intro-2{
+    background-image: url("../assets/chantalgrad2.jpg");
+    background-color: #4CB5AE;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 52%;
+    min-height: 20em;
+}
+.about-intro-2 h2{
+    font-size: 5em;
+    font-family:'Licorice', cursive;
+    margin-top: 1.5em;
+    margin-left: 5.5em;
+}
+.about-intro-3{
+    background-image: url("../assets/chantalgrad3.jpg");
+    background-color: #4CB5AE;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 60% 48%;
+    min-height: 20em;
+}
+.about-intro-3 h2{
+    font-size: 5em;
+    font-family:'Licorice', cursive;
+    margin-top: 1.5em;
+    margin-left: 10.5em;
+}
+.about-intro-4{
+    background-image: url("../assets/chantalgrad4.jpg");
+    background-color: #4CB5AE;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 40%;
+    min-height: 20em;
+}
+.about-intro-4 h2{
+    font-size: 5em;
+    font-family:'Licorice', cursive;
+    margin-top: 1.5em;
+    margin-left: 14.5em;
+}
+/*about me page styling*/
+.about-me-letter-head{
+    padding-top: 5em;
+}
+.letter-padding{
+    padding: 2em;
+}
+.letter-border{
+    min-height: 115em;
+    max-width: 55em;
+    background-color: #ffffff;
+    border-radius: 50px;
+}
+.about-me-body{
+    position: relative;
+    right: 100px;
+    top: 100px;
+}
+.text-align-right{
+    text-align: right;
+}
+.about-me-photos{
+    border-radius: 5%;
+    position: relative;
+    right: 100px;
+    top: 100px;
+}
+.monospace{
+    font-family:"Courier Prime",monospace;
+}
+.closing-padding{
+    padding: 8em 3em;;
+}
 /*
 .works-header{
     background-color:#048A81;
@@ -335,6 +466,7 @@ h2,h3,p{
 footer{
     padding: 20px;
     background-color: #fafafa;
+    <p class="hover-underline-animation">Hover this text to see the effect!</p>
 }*/
 
 
